# rawrbox

./: .clang-format  .clang-tidy  .clangd  .clangd.yaml  .codacy.yaml  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  RAWBOX - Dependencies.drawio  README.md  SECURITY.md  cmake-format.py  conan_provider.cmake  conan_support.cmake  conanfile.py  fix_includes.py  iwyu_tool.py  package-lock.cmake  rawrbox.code-workspace  render_doc.cap  run-clang-tidy.py  shadertoolsconfig.json
assimp/: CMakeLists.txt
assimp/patches/: assimp.patch
assimp/src/: importer.cpp  model.cpp
bass/: CMakeLists.txt
bass/lua/: bass_enums.lua
bass/src/: manager.cpp  sound.cpp  static.cpp
debug/: CMakeLists.txt
debug/src/: gizmos.cpp  static.cpp
debug/tests/: gizmos.spec.cpp
engine/: CMakeLists.txt
engine/src/: engine.cpp  static.cpp  threading.cpp
engine/tests/: engine.spec.cpp
math/: CMakeLists.txt
math/src/: bezier_curve.cpp  easing.cpp  matrix4x4.cpp
math/tests/: aabb.spec.cpp  color.spec.cpp  math_utils.spec.cpp  matrix4x4.spec.cpp  quaternion.spec.cpp  vector2.spec.cpp  vector3.spec.cpp  vector4.spec.cpp
network/: CMakeLists.txt
network/patch/: cpr.patch
network/src/: http.cpp  packet.cpp  socket.cpp
physics/: CMakeLists.txt
physics/src/: manager.cpp  utils.cpp
rawrbox.assimp/: CMakeLists.txt
rawrbox.assimp/patch/: assimp.patch
rawrbox.assimp/src/: importer.cpp
rawrbox.bass/: CMakeLists.txt
rawrbox.bass/src/: manager.cpp
rawrbox.engine/: CMakeLists.txt
rawrbox.engine/src/: engine.cpp
rawrbox.engine/tests/: engine.spec.cpp
rawrbox.gltf/: CMakeLists.txt
rawrbox.gltf/src/: importer.cpp
rawrbox.imgui/: CMakeLists.txt  imconfig.h
rawrbox.imgui/patch/: imgui.patch
rawrbox.imgui/src/: manager.cpp  utils.cpp
rawrbox.math/: CMakeLists.txt
rawrbox.math/src/: bezier_curve.cpp  easing.cpp  matrix4x4.cpp
rawrbox.math/tests/: aabb.spec.cpp  bbox.spec.cpp  bezier_curve.spec.cpp  color.spec.cpp  easing.spec.cpp  math_utils.spec.cpp  matrix4x4.spec.cpp  pack.spec.cpp  vector2.spec.cpp  vector4.spec.cpp
rawrbox.network/: CMakeLists.txt  libcpr.patch
rawrbox.network/lua/: http_enums.lua
rawrbox.network/src/: http.cpp  packet.cpp  socket.cpp
rawrbox.network/tests/: network_array.spec.cpp  network_var.spec.cpp
rawrbox.physics_2d/: CMakeLists.txt
rawrbox.physics_2d/src/: manager.cpp
rawrbox.physics_3d/: CMakeLists.txt
rawrbox.physics_3d/src/: manager.cpp  utils.cpp
rawrbox.render/: CMakeLists.txt
rawrbox.render/lua/: render_enums.lua
rawrbox.render/patch/: ozz.patch
rawrbox.render/src/: bindless.cpp  renderer.cpp  static.cpp  stencil.cpp  window.cpp
rawrbox.scripting/: CMakeLists.txt
rawrbox.scripting/lua/: input.lua  json.lua  math.lua  string.lua  table.lua
rawrbox.scripting/src/: hooks.cpp  manager.cpp  mod.cpp  scripting.cpp
rawrbox.scripting/tests/: mod.spec.cpp  utils.spec.cpp
rawrbox.steamworks/: CMakeLists.txt
rawrbox.steamworks/src/: callbacks.cpp  input.cpp  sdk.cpp  utils.cpp  workshop.cpp
rawrbox.ui/: CMakeLists.txt
rawrbox.ui/lua/: ui_graph_enums.lua
rawrbox.ui/src/: container.cpp  root.cpp  static.cpp
rawrbox.utils/: CMakeLists.txt
rawrbox.utils/src/: console.cpp  file_watcher.cpp  i18n.cpp  json.cpp  key.cpp  logger.cpp  pack.cpp  path.cpp  settings.cpp  string.cpp  thread_utils.cpp  threading.cpp  time.cpp  timer.cpp
rawrbox.utils/tests/: console.spec.cpp  crc.spec.cpp  event.spec.cpp  event_named.spec.cpp  i18n.spec.cpp  json.spec.cpp  key_utils.spec.cpp  path.spec.cpp  settings.spec.cpp  string.spec.cpp  tasker.spec.cpp  timer.spec.cpp
rawrbox.webm/: CMakeLists.txt
rawrbox.webm/src/: decoder.cpp  loader.cpp
render/: CMakeLists.txt
render/lua/: render_enums.lua
render/patches/: bgfx-cmake.patch
render/shaders/: .clang-tidy
render/src/: animated_texture.cpp  engine.cpp  forward_plus.cpp  g-buffer.cpp  gizmos.cpp  renderer.cpp  static.cpp  stencil.cpp  texture.cpp  window.cpp
render/tests/: camera.spec.cpp  light_base.spec.cpp  mesh.spec.cpp  model.spec.cpp  post_process.spec.cpp  renderer.spec.cpp  stencil.spec.cpp
resources/: CMakeLists.txt
resources/src/: manager.cpp  resource.cpp  static.cpp
resources/tests/: manager.spec.cpp
samples/: CMakeLists.txt
samples/001-stencil/: CMakeLists.txt  README.md
samples/002-generated-models/: CMakeLists.txt  README.md
samples/003-assimp/: CMakeLists.txt
samples/003-assimp-loading/: CMakeLists.txt
samples/003-light/: CMakeLists.txt  README.md
samples/004-instancing/: CMakeLists.txt  README.md
samples/004-light-support/: CMakeLists.txt
samples/005-post-process/: CMakeLists.txt  README.md
samples/006-assimp-animations/: CMakeLists.txt
samples/006-bass-loading/: CMakeLists.txt
samples/006-decals/: CMakeLists.txt  README.md
samples/007-assimp/: CMakeLists.txt
samples/007-bass-loading/: CMakeLists.txt
samples/007-particle-system/: CMakeLists.txt  README.md
samples/008-particle-system/: CMakeLists.txt
samples/008-ui/: CMakeLists.txt  README.md
samples/009-assimp/: CMakeLists.txt  README.md
samples/009-gltf/: CMakeLists.txt  README.md
samples/009-physics/: CMakeLists.txt
samples/009-physics-3d/: CMakeLists.txt
samples/009-ui/: CMakeLists.txt
samples/010-bass-audio/: CMakeLists.txt  README.md
samples/010-instancing/: CMakeLists.txt
samples/010-instancing-test/: CMakeLists.txt
samples/011-decals/: CMakeLists.txt
samples/011-physics-3D/: CMakeLists.txt  README.md
samples/012-physics-2D/: CMakeLists.txt  README.md
samples/012-webm/: CMakeLists.txt
samples/013-physics-2d/: CMakeLists.txt
samples/013-webm/: CMakeLists.txt  README.md
samples/014-scripting/: CMakeLists.txt  README.md
samples/015-gpu-picking/: CMakeLists.txt  README.md
samples/016-steamworks/: CMakeLists.txt  README.md
samples/017-imgui/: CMakeLists.txt  README.md
samples/018-camera/: CMakeLists.txt  README.md
samples/model/: ias.rc  (+1 more)
scripting/: CMakeLists.txt
ui/: CMakeLists.txt
utils/: CMakeLists.txt
webm/: CMakeLists.txt
(+1715 files in other folders)
